--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>How To Create A Basic Bootstrap Restaurant Website - Free Time Learning</title>
+<title>Restuarant menu</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -26,7 +26,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<!--<a href="#" class="navbar-brand">Free Time Learning</a>-->
+			
 			</div>
 			<div id="navbarCollapse" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
